Final polish: CI, docs, and website style

--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Tailor Tool</title>
+    <title>CV Tailor - Automate Your Job Applications</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>CV Tailor CLI Tool</h1>
-        <p>A tool to tailor your CV automatically to specific job profiles.</p>
+        <h1>CV Tailor CLI</h1>
+        <p>Intelligently tailor your CV to any job profile in seconds.</p>
     </header>
 
-    <section>
-        <h2>How to Use</h2>
-        <p>Download the tool and use the following command:</p>
-        <pre>
-            cargo run -- --cv path_to_cv.txt --profile path_to_profile.txt --out tailored_cv.txt
-        </pre>
-    </section>
+    <main>
+        <section>
+            <h2>What is it?</h2>
+            <p><strong>CV Tailor</strong> is a high-performance command-line tool built in Rust. It takes your master CV
+                and a job description, then automatically filters and reorders your skills to match the job requirements
+                perfectly.</p>
+        </section>
+
+        <section>
+            <h2>Get Started</h2>
+            <p>Clone the repository and run the tool directly with Cargo:</p>
+            <pre>cargo run -- --cv CV-T/cv.txt --profile CV-T/profile.txt --out CV-T/tailored.txt</pre>
+            <p><em>(Make sure you have Rust and Cargo installed)</em></p>
+        </section>
+    </main>
 
     <footer>
-        <p>GitHub Repository: <a href="https://github.com/Raihanat-debug/cv-tailor.git">CV Tailor</a></p>
+        <p>Open Source Project <br>
+            <a href="https://github.com/Raihanat-debug/cv-tailor">View on GitHub</a>
+        </p>
     </footer>
 </body>
 
