Revise index.html for improved marketing and features

--- a/index.html
+++ b/index.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Tailor - Automate Your Job Applications</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV Tailor - Tailor Your CV for Your Dream Job</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header>
-        <h1>CV Tailor CLI</h1>
-        <p>Intelligently tailor your CV to any job profile in seconds.</p>
-    </header>
 
-    <main>
-        <section>
-            <h2>What is it?</h2>
-            <p><strong>CV Tailor</strong> is a high-performance command-line tool built in Rust. It takes your master CV
-                and a job description, then automatically filters and reorders your skills to match the job requirements
-                perfectly.</p>
-        </section>
+  <!-- Header Section -->
+  <header>
+    <h1>Welcome to CV Tailor</h1>
+    <p>Your perfect CV, tailored to the job you're applying for!</p>
+  </header>
 
-        <section>
-            <h2>Get Started</h2>
-            <p>Clone the repository and run the tool directly with Cargo:</p>
-            <pre>cargo run -- --cv CV-T/cv.txt --profile CV-T/profile.txt --out CV-T/tailored.txt</pre>
-            <p><em>(Make sure you have Rust and Cargo installed)</em></p>
-        </section>
-    </main>
+  <!-- Features Section -->
+  <section id="features">
+    <h2>Features</h2>
+    <ul>
+      <li>Customize your CV automatically</li>
+      <li>Highlight relevant skills based on the job description</li>
+      <li>Fast and easy to use from the command line</li>
+    </ul>
+  </section>
 
-    <footer>
-        <p>Open Source Project <br>
-            <a href="https://github.com/Raihanat-debug/cv-tailor">View on GitHub</a>
-        </p>
-    </footer>
+  <!-- How It Works Section -->
+  <section id="how-it-works">
+    <h2>How It Works</h2>
+    <ol>
+      <li>Provide your CV file.</li>
+      <li>Provide the job profile you’re applying for.</li>
+      <li>Get a tailored CV in minutes!</li>
+    </ol>
+  </section>
+
+  <!-- Call to Action Section -->
+  <section id="cta">
+    <h2>Get Started Now</h2>
+    <p>Clone the project or visit the documentation for more information.</p>
+    <a href="https://github.com/yourusername/cv-tailor" target="_blank">Visit the GitHub Repo</a>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>Contact: your.email@example.com</p>
+  </footer>
+
 </body>
-
 </html>
