--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <p>Clone the project or visit the documentation for more information.</p>
     <a href="https://github.com/yourusername/cv-tailor" target="_blank">Visit the GitHub Repo</a>
   </section>
-
-  <!-- Footer Section -->
-  <footer>
-    <p>Contact: your.email@example.com</p>
-  </footer>
+ <!-- Footer Section -->
+    <footer>
+        <p>Contact: [EMAIL_ADDRESS]</p>
+    </footer>
 
 </body>
 </html>
+
